# BarcodeASM

./: .gitmodules  Makefile.am  README.md  config.h  configure.ac
scripts/: alignment_to_vcf.py  extract_consensus.py  filter_hash.py  msa.py  repmask_vcf.R  repmask_vcf.sh
src/BarcodeAsm/: AlignmentCommon.h  BarcodeAsm.cpp  ContigAlignment.cpp  LocalAlignment.cpp  Makefile.am  RegionFileReader.cpp  RegionFileReader.h  configure.ac
src/SGA/Algorithm/: Makefile  Makefile.in
src/SGA/Bigraph/: Makefile  Makefile.in
src/SGA/SGA/: Makefile  Makefile.in
src/SGA/SQG/: Makefile  Makefile.in
src/SGA/StringGraph/: Makefile  Makefile.in  SGAlgorithms.cpp
src/SGA/SuffixTools/: Makefile  Makefile.in
src/SGA/Util/: Makefile  Makefile.in
src/bxlra/: AlignmentCommon.h  BxBamWalker.cpp  BxBamWalker.h  ContigAlignment.cpp  ContigAlignment.h  LocalAlignment.cpp  LocalAlignment.h  LocalAssemblyWindow.cpp  LocalAssemblyWindow.h  Makefile.am  MinigraphAlignment.cpp  MinigraphAlignment.h  ReadAlignment.cpp  ReadAlignment.h  bxlra.cpp  configure.ac
test/: regions.bed  repeat_regions.bed
